# BrainfuckCompiler

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  PROJECT_OVERVIEW.md  README.md  build.sh  demo.sh  format.ninja  generate_format_ninja.py  test.sh
examples/: add.bf  counter.bf  err_mismatch.bf
include/: BrainfuckCompiler.h
src/: BrainfuckCompiler.cpp  main.cpp
